<resources>
    <string name="app_name">Dvanáctka</string>
    <string name="d_days_ago" formatted="false">%d days ago</string>
    <string name="now">now</string>
    <string name="in_d_days" formatted="false">in %d days</string>
    <string name="in_d_days_d_hours" formatted="false">in %d days, %d hours</string>
    <string name="in_d_hours_d_minutes" formatted="false">in %d hours, %d minutes</string>
    <string name="in_d_minutes" formatted="false">in %d minutes</string>
    <string name="dumpster_at_s_arrived_s" formatted="false">Dumpster at %s just arrived (%s)</string>
    <string name="dumpster_at_s_tomorrow_s" formatted="false">Dumpster at %s tomorrow (%s)</string>
    <string name="c_information">Information</string>
    <string name="c_pharmacies">Pharmacies</string>
    <string name="c_first_aid">First Aid</string>
    <string name="c_police">Police</string>
    <string name="c_landmarks">Landmarks</string>
    <string name="c_memorial_trees">Memorial Trees</string>
    <string name="c_significant_trees">Significant Trees</string>
    <string name="c_points_of_interest">Points of Interest</string>
    <string name="c_campfire">Campfire</string>
    <string name="c_artisans">Artisans</string>
    <string name="c_restaurants">Restaurants</string>
    <string name="c_shops">Shops</string>
    <string name="c_children">For Families</string>
    <string name="c_sport">Sport</string>
    <string name="c_associations">Associations</string>
    <string name="c_waste_dumpsters">Waste Dumpsters</string>
    <string name="c_waste_electro">Electric Waste</string>
    <string name="c_waste_textile">Textile Waste</string>
    <string name="c_waste">Waste</string>
    <string name="c_accident">Accident</string>
    <string name="c_roadblock">Roadblock</string>
    <string name="closed_today">closed today</string>
    <string name="news">News</string>
    <string name="events">Events</string>
    <string name="associations">Associations</string>
    <string name="list">List</string>
    <string name="trips">Trips</string>
    <string name="waste">Waste</string>
    <string name="help">Help</string>
    <string name="report_fault">Report Fault</string>
    <string name="game">Game</string>
    <string name="shops">Shops</string>
    <string name="work">Work</string>
    <string name="traffix">Traffic</string>
    <string name="official_board">Official Board</string>
    <string name="g_forester">Forester</string>
    <string name="g_culturist">Culturist</string>
    <string name="g_visitor">Visitor</string>
    <string name="g_recyclist">Recyclist</string>
    <string name="g_forester_hint">Visit trees.</string>
    <string name="g_culturist_hint">Visit cultural landmarks.</string>
    <string name="g_visitor_hint">Visit interesting places.</string>
    <string name="g_recyclist_hint">Visit different dumpster types.</string>
    <string name="multi_day_events">Multi-day events</string>
    <string name="website">Website</string>
    <string name="buy">Buy</string>
    <string name="add_to_calendar">Add to Calendar</string>
    <string name="continue_reading_on_website">Continue to website</string>
    <string name="waste_textile_longdesc">Put: shoes, clothing, textiles (home textiles, curtains, bedding, etc.), accessories (handbags, bags, toys, etc.). Textiles and paired shoes have to be packed in plastic bag.\n\nDo not put: carpets, mattresses, dirty or wet textiles, household waste.</string>
    <string name="waste_electro_longdesc">Put: small electrical appliances, like calculators, radios, small computer equipment, portable CD players, telephones.\n\nDo no put: TVs, computer monitors, fluorescent tubes and energy saving bulbs.</string>
    <string name="waste_vok_longdesc">What belongs to the large waste dumpsters: old furniture, carpets, skis, snowboards, bicycles, big mirrors, sinks, toilets coming from households.\n\nDo not throw: refridgerators, TVs, computer monitors, fluorescent and vacuum tubes, car batteries, construction debris, branches and other organic waste and all waste coming from companies assets or business activities.</string>
    <string name="timetable">Timetable</string>
    <string name="you_were_already_here">You were already here</string>
    <string name="call_prompt">Call</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="please_describe_problem">(Please describe problem here)</string>
    <string name="send_mail">Send mail...</string>
    <string name="map">Map</string>
    <string name="filter">Filter</string>
    <string name="saved_news">Saved news</string>
    <string name="navigate">Navigate</string>
    <string name="report_mistake">Report Mistake</string>
    <string name="i_m_here">I\'m here</string>
    <string name="show_notifications">Show notifications</string>
    <string name="opening_hours">Opening Hours</string>
    <string name="address">Address</string>
    <string name="none">None</string>
    <string name="all">All</string>
    <string name="game_toofar_wrongtime"><![CDATA[too far & wrong time]]></string>
    <string name="game_toofar">you are too far</string>
    <string name="game_wrongtime">wrong time</string>
    <string name="game_level_up">Level up!</string>
    <string name="game_you_are_at_level">You are now at level</string>
    <string name="game_progress_is_lost">Game progress is lost when uninstalling the app.</string>
    <string name="level">Level</string>
    <string name="indepenedent">Independent</string>
    <string name="notification_explanation">Notification will be shown 1 day before the dumpster arrival, and another at the scheduled arrival time.</string>
    <string name="add_new_record">Add record:</string>
    <string name="add_new_job_offer">Add job offer:</string>
    <string name="appinfo_longtext">This is an unofficial independent application with information from Prague 12.\n\nThat\'s why some informative texts are too short and you have to read the full text on an external website.\n\nPlease contact me with ideas for improvements.\n\nLet the application contribute to better understanding about the news and locations interesting places in Prague 12.</string>
    <string name="about_the_app">About the App</string>
    <string name="today">today</string>
    <string name="share_via">Share via</string>
    <string name="contact">Contact:</string>
    <string name="refine">Refine</string>
    <string name="location">Location</string>
    <string name="detailed_description">Detailed description</string>
    <string name="photo">Photo</string>
    <string name="subject">Description</string>
    <string name="report_illegal_dump_fault_problem">Report illegal dump, fault, problem</string>
    <string name="long_press_to_set_the_location">Long press to set the location</string>
    <string name="send_e_mail">Send e-mail</string>
    <string name="take_a_photo">Take a photo</string>
    <string name="from_gallery">From gallery</string>
    <string name="select_photo">Select Photo</string>
    <string name="fill_description">Please fill the description.</string>
    <string name="fill_photo">Adding a photo is recommended. Are you sure to omit it?</string>
    <string name="fill_location">Please specify the location.</string>
    <string name="this_form_will_help_you_compose_the_email_for_the_municipality">This form will help you compose the e-mail for the municipality.</string>
    <string name="standard">Standard</string>
    <string name="satellite">Satellite</string>
    <string name="hybrid">Hybrid</string>
    <string name="search">Search</string>
    <string name="game_permission">In order to play the game, please go to Settings and give the app the permission to access your location.</string>
    <string name="permission_explain_location">The app needs the permission to access your location to sort the objects by distance from you and locate you on map.</string>
    <string name="lunch_menu">Lunch menu</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="gamestart_note">To start playing the game, walk to the nearest place in Landmarks, Waste or Shops and tap I\'m here!</string>
    <string name="downloading_data">Downloading data...</string>
    <string name="game_you">YOU</string>
    <string name="error_downloading_data">Error when downloading data</string>
    <string name="city_office">Office</string>
    <string name="c_fault">Fault</string>
    <string name="c_toilet">Toilet</string>
    <string name="wifi_download_only">Download new data only via WiFi</string>
    <string name="dlg_cancel">Cancel</string>
    <string name="dlg_yes">Yes</string>
    <string name="photo_recommended">Photo (recommended)</string>
    <string name="subcategories">Subcategories</string>
    <string name="c_waste_separated">Separated Waste</string>
</resources>
