<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="Title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/MyHeading"
            android:id="@+id/title"/>
        <TextView
            android:text="20:00"
            android:textColor="#808080"
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/date"
            android:layout_gravity="top|right"
            android:gravity="top|right"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="2dp"
        android:textColor="#808080"
        android:id="@+id/address"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#404040"
        android:id="@+id/text"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/stackContact">
        <TextView
            android:text="@string/contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:id="@+id/contact"/>
        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />
        <Button
            android:text="e-mail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnEmail"/>
        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />
        <Button
            android:text="phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnPhone"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:text="@string/website"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnWebsite"/>
        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />
        <Button
            android:text="@string/buy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnBuy"/>
        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />
        <Button
            android:text="@string/add_to_calendar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnAddToCalendar"/>

    </LinearLayout>

</LinearLayout>
